# LittleEngine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json.template  CODE_OF_CONDUCT.md  LICENSE  LittleEngine.sln  README.md  README.md.orig  apt_install_dependencies.sh  launch.vs.json.template
Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters
Core/Core/: ArchiveReader.cpp  ArchiveReader.h  CircularVector.h  Core.h  CoreTypes.h  Deferred.h  Delegate.h  FileLogger.cpp  FileLogger.h  FileRW.h  Fixed.cpp  Fixed.h  GData.cpp  GData.h  Jobs.cpp  Jobs.h  Logger.cpp  Logger.h  Maths.cpp  Maths.h  Matrix3.cpp  Matrix3.h  OS.cpp  OS.h  Property.cpp  Property.h  Rect2.cpp  Rect2.h  SimpleTime.cpp  SimpleTime.h  StdTypes.h  SysDialog.cpp  SysDialog.h  TRange.h  TokenHandler.h  Transform.cpp  Transform.h  UByte.cpp  Utils.cpp  Utils.h  (+4 more)
Core/Core/Game/: FileRW.h  GData.cpp  NoCopy.h  OS.cpp  OS.h  Property.h
Core/Core/Game/Jobs/: JobCatalog.cpp  JobHandle.h  JobManager.h
Core/Core/Jobs/: JobCatalog.cpp  JobCatalog.h  JobHandle.cpp  JobHandle.h  JobManager.cpp  JobManager.h  JobWorker.cpp  JobWorker.h  MultiJob.cpp  MultiJob.h
Core/Private/: ArchiveReader.cpp  Asserts.cpp  FileRW.cpp  Fixed.cpp  GData.cpp  Logger.cpp  Maths.cpp  Property.cpp  Rect2.cpp  SimpleTime.cpp  SysDialog.cpp  Transform.cpp  Utils.cpp  Vector2.cpp  Version.cpp
Core/Public/: ArchiveReader.h  Asserts.h  CircularVector.hpp  Core.h  CoreTypes.h  Delegate.hpp  FileRW.h  Fixed.h  GData.h  Logger.h  Maths.h  Property.h  Rect2.h  SimpleTime.h  StdTypes.h  SysDialog.h  TRange.hpp  TokenHandler.hpp  Transform.h  UByte.h  Utils.h  Vector2.h  Version.h
Engine/: CMakeLists.txt
Engine/Engine/: Engine.h  GFX.cpp  GFX.h
Engine/Engine/Audio/: LEAudio.cpp  LEAudio.h
Engine/Engine/Debug/: Tweakable.cpp
Engine/Engine/Input/: KeyboardInput.cpp  KeyboardInput.h  LEInput.cpp
Engine/Engine/Locale/: Locale.cpp  Locale.h
Engine/Engine/Physics/: Collider.cpp  ColliderData.cpp
Engine/Engine/Rendering/: LERenderer.cpp  LERenderer.h  PrimitiveFactory.cpp  PrimitiveFactory.h
Engine/Engine/Repository/: AssetManifest.h  LERepository.cpp  LERepository.h
Engine/Game/: GameLoop.cpp  GameLoop.h
Engine/Game/Framework/: Framework.h
Engine/Game/Framework/Components/: CollisionComponent.cpp  CollisionComponent.h  Components.h  ProjectileComponent.cpp  ProjectileComponent.h  RenderComponent.cpp  RenderComponent.h
Engine/Game/Framework/Entities/: Entities.h  EntityPool.cpp  EntityPool.h  ParticleSystem.cpp  ParticleSystem.h
Engine/Game/Framework/UI/: UI.h
Engine/Game/Framework/Utility/: ProgressBar.cpp  ProgressBar.h
Engine/Game/Model/: GameConfig.cpp  GameConfig.h  GameKernel.cpp  GameKernel.h  GameManager.cpp  GameManager.h  GameSettings.cpp  GameSettings.h
Engine/Game/Model/UI/: UIContext.cpp  UIContext.h  UIElement.cpp  UIGameStyle.cpp  UIGameStyle.h  UIManager.cpp  UIManager.h  UIObject.cpp  UIObject.h  UIText.h  UITransform.h  UIWidget.cpp  UIWidget.h  UIWidgetMatrix.cpp  UIWidgetMatrix.h
Engine/Game/Model/World/: Camera.cpp  Component.cpp  Component.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  ILoadingHUD.h  LoadingHUD.cpp  LoadingHUD.h  World.cpp  WorldClock.h  WorldStateMachine.cpp  WorldStateMachine.h
Engine/SFMLAPI/: Rendering.h  Viewport.h
Engine/SFMLAPI/Audio/: AudioPlayer.cpp
Engine/SFMLAPI/Input/: InputHandler.cpp  InputHandler.h  InputMappings.h  InputStateMachine.cpp  InputStateMachine.h
Engine/SFMLAPI/Rendering/: Colour.cpp  RenderStats.cpp  RenderStats.h  Shader.cpp
Engine/SFMLAPI/Rendering/Primitives/: Primitive.cpp  Primitive.h  Quad.h  Quads.cpp  Quads.h  SFDrawable.cpp  SFText.cpp
Engine/SFMLAPI/System/: Assets.cpp  Assets.h
Engine/SFMLAPI/Viewport/: Viewport.cpp  Viewport.h  ViewportData.h
Source/: CMakeLists.txt  CMakeSettings.json.template
Source/.CMake/: Common.cmake  Utils.cmake
Source/App/: CMakeLists.txt
Source/App/App/: Main.cpp
Source/App/App/Resources/: Icon.psd
Source/Core/: CMakeLists.txt
Source/Core/Core/: ArchiveReader.cpp  ArchiveReader.h  Asserts.cpp  Asserts.h  BuildVersion.h.in  Core.h  CoreTypes.h  Delegate.h  FileRW.cpp  FileRW.h  Fixed.cpp  Fixed.h  GData.cpp  GData.h  GameVersion.cpp  GameVersion.h  Jobs.cpp  Jobs.h  Logger.cpp  Logger.h  Maths.cpp  Maths.h  Matrix3.cpp  NoCopy.h  OS.cpp  OS.h  Property.cpp  Property.h  Rect2.cpp  Rect2.h  RingBuffer.h  SimpleTime.cpp  SimpleTime.h  StdTypes.h  SysDialog.cpp  SysDialog.h  TRange.h  Transform.cpp  Transform.h  UByte.cpp  (+7 more)
Source/Core/Core/Game/: ArchiveReader.cpp  ArchiveReader.h  Deferred.h  GData.cpp  GData.h  Jobs.cpp  LEMacros.h  OS.cpp  OS.h  Property.cpp  Property.h  RingBuffer.h  TRange.h
Source/Core/Core/Jobs/: JobCatalog.cpp  JobCatalog.h  JobHandle.cpp  JobHandle.h  JobManager.cpp  JobManager.h  JobWorker.cpp  JobWorker.h
Source/Core/Core/LECoreGame/: ArchiveReader.cpp  Jobs.cpp  Jobs.h  OS.cpp  RingBuffer.h
Source/Engine/: CMakeLists.txt
Source/Engine/Engine/: Engine.h  FatalEngineException.h  GFX.cpp  GFX.h
Source/Engine/Engine/Audio/: LEAudio.cpp  LEAudio.h
Source/Engine/Engine/Context/: LEContext.cpp  LEContext.h
Source/Engine/Engine/Debug/: Profiler.cpp  Profiler.h  Tweakable.cpp  Tweakable.h
Source/Engine/Engine/Input/: KeyboardInput.cpp  KeyboardInput.h  LEInput.cpp  LEInput.h
Source/Engine/Engine/Locale/: Locale.cpp  Locale.h
Source/Engine/Engine/Physics/: Collider.cpp  Collider.h  ColliderData.cpp  LEPhysics.cpp  LEPhysics.h
Source/Engine/Engine/Renderer/: LERenderer.cpp  LERenderer.h  LEShaders.cpp  LEShaders.h
Source/Engine/SFMLAPI/: Rendering.h
Source/Game/: CMakeLists.txt
Source/Game/Framework/: Framework.h
Source/Game/Framework/UI/: UI.h
Source/Game/Gameplay/: GameInit.cpp  GameInit.h  GameLoop.cpp  GameLoop.h  Worlds.h
Source/Game/Model/: GameConfig.cpp  GameConfig.h  GameKernel.cpp  GameKernel.h  GameManager.cpp  GameManager.h  GameSettings.cpp  GameSettings.h  Inheritable.cpp  Inheritable.h
Test/: CMakeLists.txt  Main.cpp
Test/Runtime/Resources/: GameAssets.cooked
(+994 files in other folders)
