project(Game CXX)

################################################################################
# Target
################################################################################
add_little_engine_static_library("")

################################################################################
# Dependencies
################################################################################
add_dependencies(${PROJECT_NAME}
	Engine
)

################################################################################
# Libraries
################################################################################
target_link_libraries(${PROJECT_NAME} PUBLIC
	Engine
)
